--- a/y/index.html
+++ b/y/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+
+    <h1>oi</h1>
+    <!--<div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>-->
   </body>
 </html>
+<!-- Isso é um comentário e será ignorado. -->
