--- a/y/index.html
+++ b/y/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
 
-    <h1>oi</h1>
-    <!--<div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>-->
+    
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
