--- a/y/index.html
+++ b/y/index.html
@@ -10,6 +10,8 @@
 
     
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/teste.js"></script>
+
+    <button  id="meuBotao">tret</button>
   </body>
 </html>
